--- a/blog-eureka-consumer-background/src/main/resources/templates/background.html
+++ b/blog-eureka-consumer-background/src/main/resources/templates/background.html
@@ -7,6 +7,7 @@
 <script th:src="@{js/jquery-3.2.1.min.js}"></script>
 <script th:src="@{js/bootstrap.min.js}"></script>
 <link rel="stylesheet" th:href="@{css/bootstrap.min.css}"/>
+<link rel="stylesheet" th:href="@{css/bootstrap-theme.min.css}"/>
 <script type="text/javascript">
 /*<![CDATA[*/
 	$(function(){
@@ -150,19 +151,19 @@
 		 	var pages=parseInt(result.extend.pageInfo.totalPages);
 		 	var num=parseInt(result.extend.pageInfo.number);
 		 	$("#pageNav").empty();
-		 	$("#pageNav").append($("<li></li>").append($("<a></a>").append("首页")).click(function(){
+		 	$("#pageNav").append($("<li></li>").append($("<a></a>").attr("href","javascript:").append("首页")).click(function(){
 		 		blogShow(result.extend.specialName,0);
 		 	}));
 		 	for (var i = 0;i<pages; i++) {
 		 		if(i==num){
 		 			$("#pageNav").append($("<li></li>").append($("<a></a>").append(i+1)).addClass("active"));	
-		 		}else{
-		 			$("#pageNav").append($("<li></li>").append($("<a></a>").append(i+1)).click(function(){
+		 		}else if(i>=num-3&&i<=num+3){
+		 			$("#pageNav").append($("<li></li>").append($("<a></a>").attr("href","javascript:").append(i+1)).click(function(){
 		 				blogShow(result.extend.specialName,parseInt($(this).text())-1);
 		 			}));
 		 		} 		
 		 	}
-		 	$("#pageNav").append($("<li></li>").append($("<a></a>").append("尾页")).click(function(){
+		 	$("#pageNav").append($("<li></li>").append($("<a></a>").attr("href","javascript:").append("尾页")).click(function(){
 		 		blogShow(result.extend.specialName,pages-1);
 		 	}));
 		 }
@@ -262,7 +263,7 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-home"></span>Sullay</a>
+      <a class="navbar-brand" th:href="@{/}"><span class="glyphicon glyphicon-home"></span>Sullay</a>
     </div>
 
     <div class="collapse navbar-collapse navbar-right">
@@ -271,7 +272,7 @@
         <li><a class="btn" data-toggle="modal" data-target="#addOrUpdateBlog" id="pencil"><span class="glyphicon glyphicon-pencil"></span></a></li>
       </ul>
       <form class="navbar-form navbar-right" th:action="@{/logout}" method="post">
-				<input type="submit" class="btn btn-default" value="注销" />
+			<input type="submit" class="btn btn-default" value="注销" />
       </form>
     </div>
   </div>
